# gd32-rs-nightlies

gd32e5/: Cargo.toml  README.md  build.rs
gd32e5/src/: lib.rs
gd32e5/src/gd32e503/: adc2.rs  dac.rs  dbg.rs  device.x  exmc.rs  exti.rs  i2c2.rs  mod.rs  rcu.rs  slave_timer0.rs  slave_timer1.rs  slave_timer2.rs  timer0.rs  timer11.rs  usart5.rs  usbd.rs
gd32e5/src/gd32e503/adc0/: ctl0.rs  isq.rs  sampt1.rs
gd32e5/src/gd32e503/adc1/: idata1.rs  (+5 more)
gd32e5/src/gd32e505/: adc2.rs  bkp.rs  cmp.rs  dma1.rs  enet_mac.rs  enet_mac_fcth.rs  enet_msc.rs  fmc.rs  gpiob.rs  gpiof.rs  i2c0.rs  i2c1.rs  mod.rs  pmu.rs  rcu.rs  slave_timer2.rs  sqpi.rs  timer13.rs  timer5.rs  tmu.rs  usart0.rs  usart1.rs  usart5.rs  usbhs_device.rs  wwdgt.rs
gd32e5/src/gd32e507/: afio.rs  bkp.rs  can1.rs  can2.rs  cmp.rs  crc.rs  ctc.rs  dbg.rs  device.x  enet_dma.rs  enet_mac.rs  mod.rs  rtc.rs  shrtimer_common.rs  slave_timer3.rs  slave_timer4.rs  spi1.rs  spi2.rs  timer13.rs  timer5.rs  timer7.rs  uart3.rs  uart4.rs  usbgs_host.rs  usbhs_global.rs
gd32e5/src/gd32e508/: can0.rs  can2.rs  crc.rs  dac.rs  device.x  enet_dma.rs  enet_mac_fcth.rs  enet_ptp.rs  exti.rs  i2c2.rs  master_timer.rs  mod.rs  pmu.rs  slave_timer0.rs  slave_timer1.rs  slave_timer4.rs  sqpi.rs  timer4.rs  timer8.rs  tmu.rs  usbgs_host.rs  usbhs_pwrclk.rs
gd32f4/: Cargo.toml  README.md  build.rs
gd32f4/src/: lib.rs
gd32f4/src/gd32f425/: adc0.rs  adc_common.rs  ctc.rs  dac.rs  dbg.rs  dci.rs  device.x  dma0.rs  exmc.rs  fmc.rs  fs_global.rs  gpioc.rs  hs_device.rs  hs_global.rs  hs_host.rs  i2c0.rs  ipa.rs  iref.rs  mod.rs  rcu.rs  rtc.rs  spi0.rs  spi5.rs  syscfg.rs  timer1.rs  tli.rs  uart3.rs  usart0.rs
(+5280 files in other folders)
