[package]
edition = "2018"
name = "gd32f4"
version = "0.9.1"
authors = ["Andrew Walbran <qwandor@gmail.com>", "gd32-rs Contributors"]
description = "Device support crate for GD32F4 devices"
repository = "https://github.com/gd32-rust/gd32-rs"
readme = "README.md"
keywords = ["gd32", "svd2rust", "no_std", "embedded"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"

[dependencies]
vcell = "0.1.3"
cortex-m = "0.7.7"

[dependencies.cortex-m-rt]
optional = true
version = "0.7.3"

[dependencies.critical-section]
optional = true
version = "1.1.2"

[package.metadata.docs.rs]
features = ['rt', 'gd32f425']
default-target = "thumbv7em-none-eabihf"
targets = []

[features]
default = []
rt = ["cortex-m-rt/device"]
gd32f425 = []
